# python-be-common-logger

./: README.md  pyproject.toml
logger/: logging.py
logger/config/: __init__.py  format.py  logger.py
logger/manager/: logger.py
